# commuteTracker

./: .dockerignore  .env.example  .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  zones.json.example
.claude/: settings.json
.claude/commands/: commit.md  pr.md
.githooks/: pre-commit  setup.sh
.github/workflows/: ci.yml  lint-pr.yml  release-please.yml  release.yml
docs/: api-reference.md  local-development.md  mcp-integration.md  project_plan.md  releasing.md  setup_owntracks.md
docs/decisions/: adr-001-storage-architecture.md  adr-002-classifier-architecture.md
scripts/: ingest.py  plot_commute.py  rebuild_derived.py  seed_dev_data.py  train_model.py  verify_integrity.py
src/: config.py  mcp_server.py
src/api/: routes.py  service.py
src/dashboard/: api_client.py  app.py
src/ml/: features.py  model.py  trainer.py
src/processing/: commute_detector.py  enricher.py  geo_utils.py  pipeline.py  segmenter.py  tz_resolver.py
src/receiver/: app.py  passthrough.py
src/storage/: database.py  derived_store.py  label_store.py  raw_store.py  s3_sync.py
tests/: test_api_routes.py  test_api_service.py  test_audit_fixes.py  test_classifiers.py  test_commute_detector.py  test_database.py  test_enricher.py  test_geo_utils.py  test_label_store.py  test_mcp_server.py  test_ml.py  test_passthrough.py  test_pipeline.py  test_raw_store.py  test_receiver.py  test_s3_sync.py  test_segmenter.py  test_tz_resolver.py
tests/fixtures/: sample_commute.jsonl
(+18 files in other folders)
