[project]
name = "commute-tracker"
version = "0.0.3"
description = "Collect, segment, and analyze daily commute GPS data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "polars>=1.0",
    "duckdb>=1.0",
    "streamlit>=1.40",
    "folium>=0.18",
    "streamlit-folium>=0.22",
    "altair>=5.0",
    "pyarrow>=18.0",
    "boto3>=1.35",
    "sqlalchemy>=2.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
]
dev = [
    "jupyter",
    "matplotlib",
    "pytest",
    "ruff",
    "scikit-learn>=1.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
